@@ -309,6 +309,7 @@ install: apidoc
 	ln -sf htcp $(prefix)/bin/htmkdir
 	ln -sf htcp $(prefix)/bin/htmv
 	ln -sf htcp $(prefix)/bin/htping
+	ln -sf htcp $(prefix)/bin/htfind
 	cp -f gsexec $(prefix)/sbin
 	cp -f mod_gridsite.so $(prefix)/lib/httpd/modules
 
@@ -345,8 +346,8 @@ htcp-bin: htcp
                  ../htcp-bin-$(PATCH_VERSION)/man/man1
 	cp -f ../doc/README.htcp-bin ../htcp-bin-$(PATCH_VERSION)
 	cp -f htcp ../htcp-bin-$(PATCH_VERSION)/bin
-	cp -f ../doc/htcp.1 ../doc/htrm.1 ../doc/htls.1 ../doc/htll.1 \
-              ../doc/htmkdir.1 ../doc/htmv.1 ../doc/htping.1 \
+	cp -f ../doc/htcp.1 ../doc/htrm.1 ../doc/htls.1 ../doc/htmkdir.1 \
+              ../doc/htll.1 ../doc/htmv.1 ../doc/htping.1 ../doc/htfind.1 \
               ../htcp-bin-$(PATCH_VERSION)/man/man1
 	ln -sf htcp ../htcp-bin-$(PATCH_VERSION)/bin/htls
 	ln -sf htcp ../htcp-bin-$(PATCH_VERSION)/bin/htll
@@ -354,6 +355,7 @@ htcp-bin: htcp
 	ln -sf htcp ../htcp-bin-$(PATCH_VERSION)/bin/htmkdir
 	ln -sf htcp ../htcp-bin-$(PATCH_VERSION)/bin/htmv
 	ln -sf htcp ../htcp-bin-$(PATCH_VERSION)/bin/htping
+	ln -sf htcp ../htcp-bin-$(PATCH_VERSION)/bin/htfind
 	cd ../htcp-bin-$(VERSION) ; tar zcvf ../htcp-$(VERSION).bin.tar.gz .
 	rm -Rf ../htcp-bin-$(PATCH_VERSION)
 
